View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024588 | Open CASCADE | OCCT:Coding | public | 2014-02-03 10:28 | 2014-05-05 13:37 |
Reporter | Assigned To | apn | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.1 | ||||
Target Version | 6.7.1 | Fixed in Version | 6.7.1 | ||
Summary | 0024588: Fix some ICC warning fixes | ||||
Description | Some of ICC warning fixes reported in 0024574 are fixed | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Fix pushed to CR24588, please review |
|
Patch has been reviewed with minor remark. Please test. |
|
Dear BugMaster, Branch CR24588 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 0b8ecbca991ba1c94273f22b98340241aeebde6a Number of compiler warnings: occt component : Linux: 43 (44 on master) Windows: 1 (1 on master) products component : Linux: 12 (12 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: Total MEMORY difference: 371641100 / 372433444 Total CPU difference: 39960.79000000025 / 43920.350000000195 Testing on Windows: Total MEMORY difference: 419175304 / 409848796 Total CPU difference: 35290.359375 / 35405.859375 There are not differences in images found by testdiff. |
occt: master f1a5afa2 2014-02-06 06:57:56
Committer: apn Details Diff |
0024588: Fix some ICC warning fixes Some of ICC warning fixes reported in 0024574 are fixed Remove redundant ifdef |
Affected Issues 0024588 |
|
mod - src/Draw/Draw_VariableCommands.cxx | Diff File | ||
mod - src/Draw/Draw_Viewer.cxx | Diff File | ||
mod - src/Draw/Draw_Viewer.hxx | Diff File | ||
mod - src/IntPatch/IntPatch_Point.cxx | Diff File | ||
mod - src/OSD/OSD_signal_WNT.cxx | Diff File | ||
mod - src/Units/Units_Token.cxx | Diff File | ||
mod - src/V3d/V3d_View.cxx | Diff File | ||
mod - src/WNT/WNT_Window.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-02-03 10:28 |
|
New Issue | |
2014-02-03 10:28 |
|
Assigned To | => kgv |
2014-02-03 10:28 |
|
Relationship added | child of 0024574 |
2014-02-03 10:57 |
|
Note Added: 0027725 | |
2014-02-03 10:57 |
|
Status | new => resolved |
2014-02-03 12:52 | kgv | Note Added: 0027730 | |
2014-02-03 12:52 | kgv | Assigned To | kgv => bugmaster |
2014-02-03 12:52 | kgv | Status | resolved => reviewed |
2014-02-03 14:48 |
|
Assigned To | bugmaster => mkv |
2014-02-04 15:58 |
|
Note Added: 0027750 | |
2014-02-04 15:58 |
|
Test case number | => Not needed |
2014-02-04 15:58 |
|
Assigned To | mkv => bugmaster |
2014-02-04 15:58 |
|
Status | reviewed => tested |
2014-02-10 12:41 | apn | Changeset attached | => occt master f1a5afa2 |
2014-02-10 12:41 | apn | Assigned To | bugmaster => apn |
2014-02-10 12:41 | apn | Status | tested => verified |
2014-02-10 12:41 | apn | Resolution | open => fixed |
2014-05-05 13:34 |
|
Status | verified => closed |
2014-05-05 13:37 |
|
Fixed in Version | => 6.7.1 |