0024588: Fix some ICC warning fixes

Some of ICC warning fixes reported in 0024574 are fixed
Remove redundant ifdef