src/OSD/OSD_signal_WNT.cxx
@@ -67,15 +67,6 @@ static BOOL WINAPI     _osd_ctrl_break_handler ( DWORD );
 
 static LONG _osd_debug   ( void );
 
-MB_DESC fatalErrorDesc[] = {
-
-                 { MBT_ICON,   ( int )IDI_HAND              },
-                 { MBT_BUTTON, IDYES,    TEXT( "Continue" ) },
-                 { MBT_BUTTON, IDNO,     TEXT( "Debugger" ) },
-                 { MBT_BUTTON, IDCANCEL, TEXT( "Stop"     ) }
-
-};
-
 //# define _OSD_FPX ( _EM_INVALID | _EM_DENORMAL | _EM_ZERODIVIDE | _EM_OVERFLOW | _EM_UNDERFLOW )
 # define _OSD_FPX ( _EM_INVALID | _EM_DENORMAL | _EM_ZERODIVIDE | _EM_OVERFLOW )
 
