src/Units/Units_Token.cxx
@@ -390,7 +390,7 @@ void Units_Token::Dump(const Standard_Integer ashift,
   TCollection_AsciiString mean = Mean();
 
   for(i=0; i<ashift; i++)cout<<"  ";
-  cout << "Units_Token::Dump of " << hex << (long ) this << dec << endl;
+  cout << "Units_Token::Dump of " << this << endl;
   for(i=0; i<ashift; i++)cout<<"  ";
   cout<<word.ToCString()<<endl;
   for(i=0; i<ashift; i++)cout<<"  ";
